k8s-backup/recipe-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-service
  template:
    metadata:
      labels:
        app: recipe-service
    spec:
      containers:
        - name: recipe-service
          image: alya/recipe-service:latest
          ports:
            - containerPort: 8002
