k8s-backup/recipe-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-service
spec:
  selector:
    app: recipe-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
